--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Pets</title>
 </head>
 <body>
-    <a href = "#main" ="skip">Skip to Main Content</a>
+    <a href ="#main">Skip to Main Content</a>
     <header>
         <nav>
             <ul>
