--- a/recipe.html
+++ b/recipe.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <a href = "#main" ="skip">Skip to Main Content</a>
+    <a href ="#main">Skip to Main Content</a>
     <header>
         <nav>
             <ul>
